cabal-version:      2.4
name:               minesweeper-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Quang Tran (Chop Tr)
maintainer:         logan1011001@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:
    , base        ^>=4.14.3.0
    , containers

  ghc-options:      -Wunused-imports

library
  import:          shared-properties
  hs-source-dirs:  src
  exposed-modules: Lib

executable minesweeper-hs
  import:          shared-properties
  main-is:         Main.hs
  hs-source-dirs:  app
  build-depends:   minesweeper-hs
  exposed-modules: Lib

test-suite test
  import:         shared-properties
  main-is:        Spec.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  build-depends:  minesweeper-hs
  build-depends:
    , hspec
    , random
